--- a/scripts/templates/template.py.jinja2
+++ b/scripts/templates/template.py.jinja2
@@ -4,13 +4,12 @@
 from __future__ import annotations
 
 import struct
-from io import BytesIO
 from snowflake.telemetry._internal.serialize import (
     Enum,
     MessageMarshaler,
     Varint,
 )
-from typing import List, Optional
+from typing import List
     
 {% for import in file_template.imports %}
 from {{ import }} import *
@@ -56,7 +55,7 @@ class {{ message.name }}(MessageMarshaler):
 {%- endfor %}
         return size
 
-    def write_to(self, out: BytesIO) -> None:
+    def write_to(self, out: bytearray) -> None:
 {%- for field in message.fields %}
         {{ field.serialize_field_inline | indent(8) }}
 {%- endfor %}
