--- a/scripts/templates/template.py.jinja2
+++ b/scripts/templates/template.py.jinja2
@@ -3,6 +3,13 @@
 #
 # Copyright (c) 2012-2024 Snowflake Computing Inc. All rights reserved.
 #
+{{ file_template.preamble -}}
+#
+# This file has been generated from the original proto definition at
+#
+#     https://github.com/open-telemetry/opentelemetry-proto
+#
+# using a custom protoc compiler plugin by Snowflake Computing Inc.
 
 from __future__ import annotations
 
